# seeds

./: .gitignore  Cargo.toml  README.adoc  config.ron  config.ron.bak  temp.md
assets/: 2.ron  20240416_164427.adoc  20240416_164427.ron
assets/20240416_164427/: 20240416_164427.ron
assets/SNAP-210454-0019/: SNAP-210454-0019.ron
src/: app.rs  cache copy.rs  cache.rs  config.rs  lib.rs  main.rs  node.rs  utils.rs  view copy.rs  view.rs
src/cache/: convert_color.rs  dilate.rs  draw_contours.rs  error.rs  find_contours.rs  greater_than.rs  median_blur.rs  mod.rs  read.rs  subtract.rs  threshold.rs  write.rs
src/node/: convert_color.rs  convex_hull.rs  dilate.rs  draw_contours.rs  find_contours.rs  greater_than.rs  median_blur.rs  mod.rs  read.rs  subtract.rs  threshold.rs  write.rs
src/utils/: mod.rs  opencv.rs
src/view/: convert_color.rs  dilate.rs  find_contours.rs  greater_than.rs  median_blur.rs  subtract.rs  threshold.rs  write.rs
