[package]
name = "finder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "algae"

[[bin]]
name = "seeds"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["cargo", "derive"] }
itertools = "0.12.1"
# opencv = "0.90.0"
opencv = { git = "https://github.com/TDiblik/opencv-rust-nightly-compilation.git" }
ordered-float = "4.2.0"
ron = "0.8.1"
serde = { version = "1.0.198", features = ["derive"] }
eframe = { version = "0.27.2", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.27.2"
egui-snarl = { git = "https://github.com/zakarumych/egui-snarl", features = [
    "serde",
], rev = "010664736db7e0998aa12288496cc811e9143be2" }
tracing = "0.1.40"
serde_repr = "0.1.19"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4"
