[package]
edition = "2021"
name = "finder"
version = "0.1.0"

[[bin]]
name = "algae"

[[bin]]
name = "seeds"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["cargo", "derive"] }
cv = { git = "https://github.com/kgv/opencv", package = "opencv" }
eframe = { version = "0.27.2", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.27.2"
egui-snarl = { git = "https://github.com/zakarumych/egui-snarl", features = [
    "serde",
], rev = "010664736db7e0998aa12288496cc811e9143be2" }
image = { version = "0.25.1", features = ["tiff"] }
itertools = "0.12.1"
kmeans_colors = "0.6.0"
num = "0.4.2"
opencv = "0.91.2"
ordered-float = "4.2.0"
palette = "0.7.5"
ron = "0.8.1"
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0.59"
tracing = "0.1.40"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4"
